tests/ui/moves/use-correct-generic-args-in-borrow-suggest.stderr
error[E0382]: use of moved value: `value`
  --> $DIR/use-correct-generic-args-in-borrow-suggest.rs:10:9
   |
LL |     let value = String::new();
   |         ----- move occurs because `value` has type `String`, which does not implement the `Copy` trait
LL |     run.clone()(value, ());
   |                 ----- value moved here
LL |     run(value, ());
   |         ^^^^^ value used here after move
   |
help: consider borrowing `value`
   |
LL |     run.clone()(&value, ());
   |                 +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0382`.
